--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -5,10 +5,8 @@ name: Scheduled Data Collection
 on:
   # Trigger on a schedule using CRON syntax
   schedule:
-    # Example: Runs every 6 hours (at 00:00, 06:00, 12:00, 18:00 UTC)
-    # Adjust as needed - use https://crontab.guru/ for help
+    # Runs every 6 hours (at 00:00, 06:00, 12:00, 18:00 UTC)
     - cron: '0 */6 * * *'
-
   # Allow manual triggering from the GitHub Actions UI
   workflow_dispatch:
 
@@ -19,7 +17,7 @@ jobs:
     # Runner environment: use the latest standard Ubuntu Linux image
     runs-on: ubuntu-latest
     # Maximum time the entire job can run
-    timeout-minutes: 90 # Increased slightly
+    timeout-minutes: 90
 
     # Sequence of tasks (steps) executed by the runner
     steps:
@@ -54,7 +52,6 @@ jobs:
             echo "✗ WARNING: run_all_tasks.py NOT found at ${{ github.workspace }}/run_all_tasks.py"
           fi
 
-
       # Step 3: Set up the Python interpreter environment
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -80,12 +77,11 @@ jobs:
         run: |
           echo "Running test_imports.py script..."
           if [ -f "${{ github.workspace }}/test_imports.py" ]; then
-             # Execute using python3 and explicit path
-             python3 ${{ github.workspace }}/test_imports.py
-             echo "Import test script execution complete." # Status determined by script's exit code
+            python3 ${{ github.workspace }}/test_imports.py
+            echo "Import test script execution complete."
           else
-             echo "✗ ERROR: test_imports.py not found. Cannot test imports."
-             exit 1 # Fail step if test script missing
+            echo "✗ ERROR: test_imports.py not found."
+            exit 1
           fi
 
       # Step 6: Check if GitHub Secrets were passed correctly
@@ -117,6 +113,5 @@ jobs:
           WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY }}
         run: |
           echo "Executing master script: python3 ${{ github.workspace }}/run_all_tasks.py"
-          # Run the main script using python3 and explicit path
           python3 ${{ github.workspace }}/run_all_tasks.py
           echo "Master script execution finished."
